--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: ruby
 rvm:
   - 1.9.3  
-script: bundle exec rake db:migrate spec
+script: 
+  - bundle exec rake db:migrate 
+  - bundle exec rake
